# raytracer

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  README.md  Raytracer.make  blue_red_spheres.ppm  build_debug.sh  build_release.sh  callgrind.out.133395  callgrind.out.158587  callgrind.out.161781  callgrind.out.200703  callgrind.out.2020224  callgrind.out.2163596  callgrind.out.2225451  callgrind.out.2264473  callgrind.out.2305250  callgrind.out.2426363  callgrind.out.2473794  callgrind.out.2553674  callgrind.out.2615587  callgrind.out.2887925  callgrind.out.2903208  cmake_build.sh  cmake_install.cmake  compile_commands.json  cornell.json  defocus_blur.ppm  final_scene_low_quality.ppm  glass_sphere_sometime_refract.ppm  glass_spheres_no_reflection.ppm  hollow_glass_sphere.ppm  imgui.ini  init_submodules.sh  moving_spheres.ppm  (+10 more)
assets/textures/: sources.txt
scenes/: cornell.json  random-test.json  scene1-duplicated.json  scene12022-06-27_23-14-40.json  test.json
src/: AABB.cpp  AABB.h  AARect.h  AsyncRenderData.cpp  AsyncRenderData.h  BVHNode.cpp  BVHNode.h  Box.h  Camera.cpp  Camera.h  CheckerTexture.h  Clr.h  ConstantMedium.h  Constants.h  Defs.h  Dielectric.h  DiffuseLight.h  GroupPanel.cpp  GroupPanel.h  Hittable.h  HittableBuilder.h  HittableList.cpp  HittableList.h  IImguiDrawable.h  IRasterizable.h  IState.h  ImageTexture.h  Isotropic.h  Lambertian.h  Material.h  MaterialFactory.h  Metal.h  MovingSphere.h  NoiseTexture.h  ObjectFactory.h  Perlin.h  Pixel.h  Prog.h  Ray.cpp  Ray.h  (+44 more)
src/data_structures/: JobQueue.h  Pixel.h  Vec3.cpp  Vec3.h  vec3.cpp  vec3.h
src/editor/: CameraEx.h  Cuboid.h  PreviewTexture.cpp  PreviewTexture.h  Utils.cpp  Utils.h  camera.cpp  camera.h  editor.cpp  editor.h
src/materials/: ConstantMedium.h  Dielectric.h  DiffuseLight.h  Isotropic.h  Lambertian.h  Material.h  MaterialBuilder.h  MaterialFactory.h  Metal.h
src/objects/: AARect.cpp  AARect.h  Box.cpp  Box.h  ConstantMedium.h  MovingSphere.h  ObjectFactory.h  Plane.h  Sphere.cpp  Sphere.h  Triangle.h
src/textures/: CheckerTexture.h  ImageTexture.h  NoiseTexture.h  SolidColor.h  Texture.h  TextureFactory.h
